--- a/Arrow website/boxes.css
+++ b/Arrow website/boxes.css
@@ -11,15 +11,16 @@
 	font-size: 13px;
 	color: #7c5252;
 	padding:20px;
+	word-spacing: 3px;
 }
 #kid1{
 	border: 0px solid red;
 	background: ;
-	padding: 10px;
-	margin:0px;
+	padding: 5px;
+	margin-left:5px;
 	-webkit-box-flex: 1;
 	-moz-box-flex: 1;
-	width:570px;
+	width:550px;
 	height:150px;
 }
 #kid2{
@@ -37,7 +38,7 @@
 	padding-top: 83px;
 	-webkit-box-flex: 0;
 	-moz-box-flex: 0;
-	width:200px;
+	width:265px;
 	height:50px;
 }
 #kid4{
@@ -47,7 +48,7 @@
 	margin-right: -50px;
 	-webkit-box-flex: 0;
 	-moz-box-flex: 0;
-	width:420px;
+	width:450px;
 	height:50px;
 }
 #children{
@@ -68,7 +69,7 @@
 	-moz-box-orient:horizontal;
 	margin-left: 250px;
 	width:450px;
-	height:50px;
+	height:40px;
 	-webkit-box-align:stretch;
 	-moz-box-align:stretch;
 }
