--- a/Arrow website/css/menu.css
+++ b/Arrow website/css/menu.css
@@ -1,9 +1,8 @@
-
 .menu-space {margin-left:0px;}
 
 #menu {
 	list-style:none;
-	width:650px;
+	width:750px;
 	margin:-70px auto 0px auto;
 	height:70px;
 	position:absolute; 
@@ -16,13 +15,13 @@
 	display:block;
 	text-align: left;
 	position:relative;
-	padding: 4px 3px 4px 3px;
+	padding: 4px 3px 4px 15px;
 	margin-top:102px;
 	border:none;
 	z-index:2;
 }
 
-#menu li:hover {
+#menu li: {
 	padding: 4px 10px 4px 10px; color:#bc1c1c;
 }
 #menu li:active { color:#bc1c1c;}
